<resources>
    <string name="app_name">TooDoot</string>
    <string name="title_todo">ToDo</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_graphic">Graphic</string>
    <string name="search">Search</string>
    <string name="setting">Settings</string>
    <string name="textview">TextView</string>
    <string name="task_name">Task Name</string>
    <string name="add_task">add_task</string>
    <string name="new_task">New task</string>
    <string name="button">Button</string>
    <string name="save">Save</string>

    <string-array name="nav_item_activity_titles">
        <item>ToDo</item>
        <item>Calendar</item>
        <item>Graphic</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="snack_bar_undo">UNDO</string>
    <string name="title_settings">Settings</string>
    <string name="title_choose_any_file">Select a file</string>
    <string name="channel_name">notification_channel</string>
    <string name="name_task">Name Task</string>
    <string name="add_description">Add Description</string>
    <string name="add_date">Add Date</string>
    <string name="add_list">Add List</string>
    <string name="add_priority">Add Priority</string>
    <string name="add_tag">Add Tag</string>
    <string name="add_time">Add Time</string>
    <string name="today">Today</string>
    <string name="list">List</string>
    <string name="tag">Tag</string>
    <string name="day">Day  </string>
    <string name="week">Week </string>
    <string name="month">Month</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="next_week">Next Week</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="load_todotxt">Load todo.txt file</string>
    <string name="change_dir">Change todo.txt directory</string>
    <string name="notification_priority">Set a minimum notification priority</string>
    <string name="notification_time">Set Notification Time Reminder</string>
    <string name="completation_rate">Completation Rate</string>
    <string name="completation_dates">Completation Dates</string>
    <string name="completed">Completed</string>
    <string name="uncompleted">Uncompleted</string>
    <string name="task_completed">Task Completed</string>
    <string name="every_priority_not">Notifications for every task</string>
    <string name="min_priority_not">Notifications for tasks with priority greater or equal to</string>
    <string name="select_priority">Select Priority</string>
    <string name="unknown_priority">Unknown</string>
    <string name="set_tags">Set Tags</string>
    <string name="set_lists">Set Lists</string>
    <string name="all">All</string>
    <string name="search_text">Search Name +Tag @List (P)</string>
    <string name="hide_completed_task">Hide completed task</string>
</resources>
