<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/menu_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textListInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/list"
                    card_view:layout_constraintBottom_toBottomOf="parent"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintTop_toTopOf="parent">

                    <AutoCompleteTextView
                        android:id="@+id/list_dropdown"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="100dp"
                        />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textTagInputLayout"

                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/tag"
                    card_view:layout_constraintBottom_toBottomOf="parent"
                    card_view:layout_constraintStart_toEndOf="@+id/textListInputLayout"
                    card_view:layout_constraintTop_toTopOf="parent">

                    <AutoCompleteTextView
                        android:id="@+id/tag_dropdown"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="100dp" />
                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
            </HorizontalScrollView>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/pie_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/piename"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/design_default_color_on_secondary"
                    android:textSize="18sp"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/rate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginBottom="32dp"
                    android:textColor="@color/design_default_color_on_secondary"
                    android:textSize="24sp"
                    card_view:layout_constraintBottom_toBottomOf="@+id/piechart"
                    card_view:layout_constraintStart_toEndOf="@+id/piechart"
                    card_view:layout_constraintTop_toTopOf="@+id/piechart" />

                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/piechart"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    card_view:layout_constraintBottom_toBottomOf="parent"
                    card_view:layout_constraintStart_toStartOf="@+id/piename"
                    card_view:layout_constraintTop_toBottomOf="@+id/radioGroup">

                </com.github.mikephil.charting.charts.PieChart>

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    card_view:layout_constraintStart_toStartOf="@+id/piename"
                    card_view:layout_constraintTop_toBottomOf="@+id/piename">

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/all_radio"
                        style="@style/TimeRadioButton"
                        android:button="@null"
                        android:text="@string/all" />

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/day_radio"
                        style="@style/TimeRadioButton"
                        android:button="@null"
                        android:text="@string/day"/>

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/week_radio"
                        style="@style/TimeRadioButton"
                        android:button="@null"
                        android:text="@string/week"/>

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/month_radio"
                        style="@style/TimeRadioButton"
                        android:button="@null"
                        android:text="@string/month" />
                </RadioGroup>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/line_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/linename"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/design_default_color_on_secondary"
                    android:textSize="18sp"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintTop_toTopOf="parent" />

                <RadioGroup
                    android:id="@+id/radioGroup_line"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    card_view:layout_constraintStart_toStartOf="@+id/linename"
                    card_view:layout_constraintTop_toBottomOf="@+id/linename">

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/day_radio_line"
                        android:button="@null"
                        style="@style/TimeRadioButton"
                        android:text="@string/day" />

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/week_radio_line"
                        android:button="@null"
                        style="@style/TimeRadioButton"
                        android:text="@string/week" />


                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/month_radio_line"
                        android:button="@null"
                        style="@style/TimeRadioButton"
                        android:text="@string/month" />
                </RadioGroup>

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/line_chart"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    card_view:layout_constraintBottom_toBottomOf="parent"
                    card_view:layout_constraintStart_toStartOf="@+id/linename"
                    card_view:layout_constraintTop_toBottomOf="@+id/radioGroup_line" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>
</ScrollView>


